--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
+    "firebase-functions": "^5.0.1",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
