--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^4.12.0",
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
