--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "mongo-market",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
