--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,3 @@
-
 {
   "hosting": {
     "source": ".",
@@ -7,8 +6,14 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "frameworksBackend": {
-      "region": "us-central1"
-    }
+    "rewrites": [
+      {
+        "source": "**",
+        "function": {
+          "functionId": "server",
+          "region": "us-central1"
+        }
+      }
+    ]
   }
 }
