PS C:\Users\madji\Desktop\FORMATION MZA-CHAD-DIGITAL\MZA\mongo-market-ma

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 
 {
   "hosting": {
-    "source": ".",
+    "public": "out",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -10,10 +10,7 @@
     "rewrites": [
       {
         "source": "**",
-        "function": {
-          "functionId": "server",
-          "region": "us-central1"
-        }
+        "destination": "/index.html"
       }
     ]
   }
