--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "mongo-market",
   "version": "0.1.0",
@@ -60,7 +59,8 @@
     "recharts": "^2.12.7",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
