--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "private": true,
   "engines": {
     "node": "22"
-  }
-}
-
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -32,8 +30,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1","@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
@@ -63,7 +60,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
   },
-  "devDependencies": {
+ "devDependencies": {
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -74,5 +71,5 @@
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
-  }
+  }
 }
