--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@genkit-ai/googleai": "latest",
     "zod": "3.x",
     "lucide-react": "^0.408.0",
-    "next": "16.0.7",
+    "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -59,15 +59,17 @@
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "16.0.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
